src/tests/snapshots/learn_chumsky__tests__expr__binary_expressions-7.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
1 + 2 - 3 * 4 / 5
---

Some(
    Spanned(
        Binary(
            Spanned(
                Binary(
                    Spanned(
                        Int(1),
                        0..1,
                    ),
                    Add,
                    Spanned(
                        Int(2),
                        4..5,
                    ),
                ),
                0..5,
            ),
            Sub,
            Spanned(
                Binary(
                    Spanned(
                        Binary(
                            Spanned(
                                Int(3),
                                8..9,
                            ),
                            Mul,
                            Spanned(
                                Int(4),
                                12..13,
                            ),
                        ),
                        8..13,
                    ),
                    Div,
                    Spanned(
                        Int(5),
                        16..17,
                    ),
                ),
                8..17,
            ),
        ),
        0..17,
    ),
)

--- Errors ---
[]
---
