src/tests/snapshots/learn_chumsky__tests__expr__block_expressions-2.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ call_me(); and_me(); }
---

Some(
    Spanned(
        Block(
            [
                Expr(
                    Spanned(
                        Call(
                            Spanned(
                                Ident("call_me"),
                                2..9,
                            ),
                            [],
                        ),
                        2..11,
                    ),
                ),
                Expr(
                    Spanned(
                        Call(
                            Spanned(
                                Ident("and_me"),
                                13..19,
                            ),
                            [],
                        ),
                        13..21,
                    ),
                ),
            ],
        ),
        0..24,
    ),
)

--- Errors ---
[]
---
