src/tests/snapshots/learn_chumsky__tests__expr__block_expressions.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{
	testing;
	testing;
}
---

Some(
    Spanned(
        Block(
            [
                Spanned(
                    Expr(
                        Spanned(
                            Ident("testing"),
                            3..10,
                        ),
                    ),
                    3..11,
                ),
                Spanned(
                    Expr(
                        Spanned(
                            Ident("testing"),
                            13..20,
                        ),
                    ),
                    13..21,
                ),
            ],
        ),
        0..23,
    ),
)

--- Errors ---
[]
---
