src/tests/snapshots/learn_chumsky__tests__expr__if_expressions-2.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if true then print("Hello Universe!") else print("Hello World!")
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Ident("true"),
                3..7,
            ),
            then_branch: Spanned(
                Call(
                    Spanned(
                        Ident("print"),
                        13..18,
                    ),
                    [
                        Spanned(
                            String("Hello Universe!"),
                            19..36,
                        ),
                    ],
                ),
                13..37,
            ),
            else_branch: Some(
                Spanned(
                    Call(
                        Spanned(
                            Ident("print"),
                            43..48,
                        ),
                        [
                            Spanned(
                                String("Hello World!"),
                                49..63,
                            ),
                        ],
                    ),
                    43..64,
                ),
            ),
        },
        0..64,
    ),
)

--- Errors ---
[]
---
