src/tests/snapshots/learn_chumsky__tests__expr__if_expressions-5.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if true then "Hello Universe!"
else "Hello World!"
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Ident("true"),
                3..7,
            ),
            then_branch: Spanned(
                String("Hello Universe!"),
                13..30,
            ),
            else_branch: Some(
                Spanned(
                    String("Hello World!"),
                    36..50,
                ),
            ),
        },
        0..50,
    ),
)

--- Errors ---
[]
---
