src/tests/snapshots/learn_chumsky__tests__expr__if_expressions-6.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if stuff_goes_right(1, 2, 9) then {
	print("Hello Universe!");
	20;
} else {
	print("Hello World!");
	10;
}
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Call(
                    Spanned(
                        Ident("stuff_goes_right"),
                        3..19,
                    ),
                    [
                        Spanned(
                            Int(1),
                            20..21,
                        ),
                        Spanned(
                            Int(2),
                            23..24,
                        ),
                        Spanned(
                            Int(9),
                            26..27,
                        ),
                    ],
                ),
                3..28,
            ),
            then_branch: Spanned(
                Block(
                    [
                        Expr(
                            Spanned(
                                Call(
                                    Spanned(
                                        Ident("print"),
                                        37..42,
                                    ),
                                    [
                                        Spanned(
                                            String("Hello Universe!"),
                                            43..60,
                                        ),
                                    ],
                                ),
                                37..61,
                            ),
                        ),
                        Expr(
                            Spanned(
                                Int(20),
                                64..66,
                            ),
                        ),
                    ],
                ),
                34..69,
            ),
            else_branch: Some(
                Spanned(
                    Block(
                        [
                            Expr(
                                Spanned(
                                    Call(
                                        Spanned(
                                            Ident("print"),
                                            78..83,
                                        ),
                                        [
                                            Spanned(
                                                String("Hello World!"),
                                                84..98,
                                            ),
                                        ],
                                    ),
                                    78..99,
                                ),
                            ),
                            Expr(
                                Spanned(
                                    Int(10),
                                    102..104,
                                ),
                            ),
                        ],
                    ),
                    75..107,
                ),
            ),
        },
        0..107,
    ),
)

--- Errors ---
[]
---
