src/tests/snapshots/learn_chumsky__tests__expr__recover_call-3.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
testing(1 2 3)
---

Some(
    Spanned(
        Call(
            Spanned(
                Ident("testing"),
                0..7,
            ),
            [
                Spanned(
                    Error,
                    7..14,
                ),
            ],
        ),
        0..14,
    ),
)

--- Errors ---
[
    ParseError {
        span: 10..11,
        reason: ExpectedFound {
            expected: [
                Comma,
                Plus,
                Minus,
                Star,
                Slash,
                BangEq,
                EqEq,
                LessThan,
                GreaterThan,
                OpenParen,
                CloseParen,
            ],
            found: Some(
                Int(
                    2,
                ),
            ),
        },
    },
]
---
