src/tests/snapshots/learn_chumsky__tests__expr__recover_call-4.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
testing(1 + / 2)
---

Some(
    Spanned(
        Call(
            Spanned(
                Ident("testing"),
                0..7,
            ),
            [
                Spanned(
                    Error,
                    7..16,
                ),
            ],
        ),
        0..16,
    ),
)

--- Errors ---
[
    ParseError {
        span: 12..13,
        reason: ExpectedFound {
            expected: [
                Minus,
                Bang,
            ],
            found: Some(
                Slash,
            ),
        },
    },
]
---
