src/tests/snapshots/learn_chumsky__tests__expr__recover_group-2.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
(1 +)
---

Some(
    Spanned(
        Error,
        0..5,
    ),
)

--- Errors ---
[
    ParseError {
        span: 4..5,
        reason: ExpectedFound {
            expected: [
                Minus,
                Bang,
            ],
            found: Some(
                CloseParen,
            ),
        },
    },
]
---
