src/tests/snapshots/learn_chumsky__tests__expr__recover_if-6.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if testing(1, (2, 3) then _
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Error,
                0..25,
            ),
            then_branch: Spanned(
                Ident("_"),
                26..27,
            ),
            else_branch: None,
        },
        0..27,
    ),
)

--- Errors ---
[
    ParseError {
        span: 21..25,
        reason: ExpectedFound {
            expected: [
                Comma,
                Plus,
                Minus,
                Star,
                Slash,
                BangEq,
                EqEq,
                LessThan,
                GreaterThan,
                OpenParen,
                CloseParen,
            ],
            found: Some(
                Then,
            ),
        },
    },
]
---
