src/tests/snapshots/learn_chumsky__tests__expr__simple_expressions-6.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
(if true then 1 else 2) + 3
---

Some(
    Spanned(
        Binary(
            Spanned(
                If {
                    condition: Spanned(
                        Ident("true"),
                        4..8,
                    ),
                    then_branch: Spanned(
                        Int(1),
                        14..15,
                    ),
                    else_branch: Some(
                        Spanned(
                            Int(2),
                            21..22,
                        ),
                    ),
                },
                1..22,
            ),
            Add,
            Spanned(
                Int(3),
                26..27,
            ),
        ),
        1..27,
    ),
)

--- Errors ---
[]
---
